
	* support/regression/tests/gcc-torture-execute-20111227-1.c,
	  support/regression/tests/gcc-torture-execute-2012*.c,
	  support/regression/tests/gcc-torture-execute-2013*.c,
	  support/regression/tests/gcc-torture-execute-2014*.c,
	  support/regression/tests/gcc-torture-execute-2015*.c,
	  support/regression/tests/gcc-torture-execute-2017*.c:
	  Port more tests from the GCC testsuite.

2017-09-25 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCval.c,
	  support/regression/tests/bug-2645.c:
	  Fix bug #2645, patch by Kamil Zbróg.
	* src/z80/gen.c,
	  support/regression/tests/bug-441448.c,
	  support/regression/tests/bug2729218.c:
	  Fix bug #2649.

2017-09-25 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCdwarf2.c:
	  Fix long long support in DWARF output (bug #2613)
	* src/z80/gen.c:
	  Fix interaction of __z88dk_fastcall with frame pointer setup when optimizing for code size (bug #2581).
	* device/lib/calloc.c,
	  support/regression/tests/malloc.c:
	  Fix bug #2650.

2017-09-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCicode.c:
	  Optimize stm8 left shifts a bit better.

2017-09-20 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/preserves_regs.c:
	  Test specifications for preserved registers.

2017-09-13 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/main.c:
	  Fix handling of specifications for preserved registers.

2017-09-12 Ben Shi <powerstudio1st AT 163 DOT com>

	* support/regression/tests/bug-441448.c:
	* support/regression/tests/bug2729218.c:
	  Disabled for gbz80.

2017-09-08 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/stm8/peeph.def:
	  Optimize bit-xor with BCPL.
	* support/regression/tests/bug-2642.c:
	  Improve test case.

2017-08-20 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/SDCCpeeph.c:
	  Improve notVolatile() for stm8.
	* src/stm8/peeph.def:
	  Add more rules for optimization with BSET/BRES.
	* support/regression/tests/bug-2642.c:
	  Add a new test case.
